[tool.black]
line-length = 180

[tool.flake8]
max-line-length = 172
ignore = "E203"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "C",  # flake8-comprehensions
]
line-length = 172
# Allow unused variables when underscore-prefixed.
ignore = [
    "E501",
    "C408", # Unnecessary dict call - rewrite as a literal.
    "C901", # Function is too complex
    "C416", # Unnecessary list comprehension
]

[tool.poetry]
name = "pdh"
version = "0.5.0"
description = "Pagerduty CLI for Humans"
authors = ["Manuel Bovo <manuel.bovo@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/mbovo/pdh"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
colorama = "^0.4.6"
pdpyras = "^5.2.0"
rich = "^13.8.1"
PyYAML = "^6.0.2"
humanize = "^4.10.0"
jsonpath-ng = "^1.6.1"
deprecation = "^2.1.0"
setuptools = "^75.1.0"
dikdik = "^0.1.6"

[tool.poetry.scripts]
pdh = "pdh.main:main"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.8.0"
pytest = "^8.3.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
